deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 2apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: scottnakada/angular2-docker-hello-world:latest
        ports:
        - containerPort: 80
