service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angular
  ports:
  - name: http
    port: 80
    targetPort: 5001
  type: NodePort
